Fix popover background in dark mode

--- a/css/timemanager.scss
+++ b/css/timemanager.scss
@@ -722,7 +722,7 @@ label {
 }
 
 .popover {
-	background: var(--background);
+	background: var(--color-background-dark);
 	box-shadow: var(--color-primary-light) 0px 1px 4px 1px;
 	width: 320px;
 	border: 1px solid var(--color-border);
